# limbic

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  WEBSITE_SETUP.md  classes.txt  pyproject.toml  requirements.txt
assets/so101/: so101_new_calib.urdf
calibration/: accuracy_model.json  accuracy_samples.csv
docs/: CALIBRATION_VALUES.md  HANDOFF_camera_localization.md  HANDOFF_ik_ruler_check.md  VISION.md
examples/: run_mock_demo.py
limbic/: __init__.py  _core.py  platform_support.py  runlog.py
limbic/brain/: __init__.py  orchestrator.py  system_prompt.py  tools.py
limbic/control/: __init__.py  _prep_ik_wrapper.py  _prep_planar_ik.py  accuracy_model.py  arm.py  backends.py  calibration.py  config.py  ik_chain.py  kinematics.py  localization.py  mink_ik.py  safety.py
limbic/inputs/: __init__.py  base.py  registry.py
limbic/primitives/: __init__.py  authoring.py  base.py  example_plan.py  registry.py  run_sequence.py
limbic/vision/: __init__.py  detector.py  dino.py  sizing.py  visual_align.py  workspace.py
scripts/: arm_connect_check.py  calibrate_accuracy.py  click_localize.py  describe_machine.py  extrinsics_live.py  go_home.py  stage1_ik_check.py  stage2_calibration_check.py  stage2_ruler_check.py  stage3_extrinsics.py  stage3_extrinsics_robust.py  stage3_intrinsics.py  vision_detect_demo.py  vision_detect_dual.py  workspace_view.py
web/: README.md  pipeline.py  server.py
web/static/: app.js  index.html  runs.html  style.css
